--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header style="text-align: center; font-size: 24px; font-weight: bold;">Time Table - 3P11</header>
-    <img style="display: block; margin: 0 auto; height: 100%; width: 100%;" src="./schedule (1).png" alt="timetable">
+    <img style="display: block; margin: 0 auto; height: 100%; width: 100%;" src="./s.png" alt="timetable">
     <main></main>
     <footer></footer>
   </body>
